--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,7 @@
 
+OPEN_AI_SECRET=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
+OPENAI_ORGANIZATION_ID=org-N74wkYKekIgpAcIH7QzrHXYS
+MONGODB_URL=mongodb+srv://sushant_bhau:21Uec%40137@cluster0.4op8h.mongodb.net/chatguru?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=thisismysecretofsushantbhauelectronics
+COOKIE_SECRET=thisismysecretofsushantbhauelectronics
+PORT=5000
